<resources>
    <string name="app_name">SBH</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re-Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="select_if_business_account">Select If Business Account</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_business_address">Enter Business Address</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="epages">ePages</string>
    <string name="the_best_platform_to_connect_users_with_their_local_small_businesses">The best platform to connect
        users with their local small businesses.
    </string>
    <string name="or_sign_up">Or, sign up!</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_log_in_below">Already have an account? Log in below.</string>
    <string name="home">Home</string>
    <string name="noMatch">Make sure the passwords match!</string>
    <string name="minChars">Must be a minimum of 8 characters</string>
    <string name="your_account">Your Account</string>
    <string name="emailDisplay">Email:</string>
    <string name="enter_a_category">Enter a category</string>
    <string name="enter_price_range_1_4">Enter Price Range(1–4)</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorites">Favorites</string>
    <string name="favss">Favorites:</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="business_name">Business Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="make_sure_all_fields_have_a_valid_entry">Make sure all fields have a valid entry</string>
    <string name="enter_town">Enter Town</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="profilepic">profilepic</string>
    <string name="uploaded1">uploaded1</string>
    <string name="uploaded2">uploaded2</string>
    <string name="profilepic2">profilepic2</string>
    <string name="todo">TODO</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="enter_new_business_name">Enter New Business Name</string>
    <string name="update_this">Update This</string>
    <string name="update_name">Update Name</string>
    <string name="update_password">Update Password</string>
    <string name="business">Business</string>
    <string name="apply_edits">Apply Edits</string>
    <string name="return_to_search">Return To Search</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="add_images">Add Images</string>
    <string name="email">Email</string>
    <string name="profile_image">Profile Image</string>
    <string name="address">Address</string>
    <string name="number_of_stars">Number of Stars</string>
    <string name="numStars">Number of Stars: **add this**</string>
    <string name="my_favorite">My Favorite</string>
    <string name="go_to_page">Go to Page</string>
    <string name="favs">favs</string>
    <string name="account">account</string>
    <string name="acct">acct</string>
    <string name="maps">maps</string>
    <string name="favorite">favorite</string>
    <string name="back_to_home">Back to Home</string>
    <string name="show_search_results_on_map">Show Search Results on Map</string>
    <string name="favorited_by">Favorited by:</string>
    <string name="return_to_home">Return To Home</string>
    <string name="timesFavs">Number of Times Favorited: </string>
    <string name="priceR">Price: </string>
</resources>