<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BusinessAccountActivity" android:background="#7A03A9F4">

    <TextView
            android:text="@string/contact_info"
            android:layout_width="158dp"
            android:layout_height="40dp" android:id="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.703" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.436" app:layout_constraintBottom_toTopOf="@+id/textView12"
            android:fontFamily="@font/fenix"/>
    <TextView
            android:text="@string/business_name"
            android:layout_width="154dp"
            android:layout_height="44dp" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.692" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.257" app:layout_constraintBottom_toTopOf="@+id/textView12"
            android:fontFamily="@font/fenix"/>
    <TextView
            android:text="@string/favorites"
            android:layout_width="260dp"
            android:layout_height="36dp" android:id="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.099" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.827" app:layout_constraintBottom_toTopOf="@+id/textView12"
            android:fontFamily="@font/fenix"/>
    <TextView
            android:text="@string/category"
            android:layout_width="279dp"
            android:layout_height="39dp" android:id="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.128" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.588" android:fontFamily="@font/fenix"/>
    <TextView
            android:text="@string/location"
            android:layout_width="278dp"
            android:layout_height="61dp" android:id="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.136" android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.053" app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:fontFamily="@font/fenix"/>
    <TextView
            android:text="@string/price"
            android:layout_width="277dp"
            android:layout_height="34dp" android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.122" android:textSize="24sp"
            app:layout_constraintVertical_bias="0.533" app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView14" android:fontFamily="@font/fenix"/>
    <TextView
            android:text="@string/your_account"
            android:layout_width="221dp"
            android:layout_height="42dp" android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.084" app:layout_constraintVertical_bias="0.023"
            android:textSize="36sp" android:fontFamily="@font/fenix" android:textColor="#131212"
            android:textStyle="bold"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ratingBar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.342"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars" android:id="@+id/imageView"
            android:contentDescription="@string/profilepic"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.54" app:layout_constraintBottom_toTopOf="@+id/ratingBar3"
            app:layout_constraintVertical_bias="0.093" android:scaleType="fitXY"/>
    <Button
            android:text="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/edit"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="667dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="145dp" android:layout_marginStart="145dp" android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp" app:layout_constraintEnd_toEndOf="parent"
            android:textColorLink="#FFFFFF" android:fontFamily="@font/fenix"/>
    <Button
            android:text="@string/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="667dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="296dp" android:layout_marginStart="296dp" android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/fenix"/>
</androidx.constraintlayout.widget.ConstraintLayout>