<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BusinessAccountEditActivity" android:background="#7503A9F4">

    <EditText android:layout_width="241dp" android:layout_height="42dp"
              android:id="@+id/editCat" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.852"
              app:layout_constraintVertical_bias="0.593" android:inputType="textPersonName" android:autofillHints=""
              android:hint="@string/update_this"/>
    <EditText android:layout_width="241dp" android:layout_height="42dp"
              android:id="@+id/editprice" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.847"
              app:layout_constraintVertical_bias="0.518" android:inputType="textPersonName" android:autofillHints=""
              android:hint="@string/update_this"/>
    <EditText android:layout_width="241dp" android:layout_height="42dp"
              android:id="@+id/editLoc" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.847"
              app:layout_constraintVertical_bias="0.444" android:inputType="textPersonName" android:autofillHints=""
              android:hint="@string/update_this"/>
    <EditText android:layout_width="125dp" android:layout_height="41dp"
              android:id="@+id/editCntct" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.943"
              app:layout_constraintVertical_bias="0.255" android:inputType="textPersonName" android:autofillHints=""
              android:hint="@string/update_this"/>
    <TextView
            android:text="@string/location"
            android:layout_width="107dp"
            android:layout_height="36dp" android:id="@+id/Address"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.44" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.042"/>
    <TextView
            android:text="@string/price"
            android:layout_width="107dp"
            android:layout_height="36dp" android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.042" android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/catE" app:layout_constraintTop_toBottomOf="@+id/Address"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="107dp"
            android:layout_height="36dp" android:id="@+id/contact"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.254"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@tools:sample/avatars" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="519dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="267dp"
            android:layout_marginRight="267dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/profilepic"/>
    <ImageView
            android:layout_width="169dp"
            android:layout_height="213dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageView6" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="473dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="45dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="226dp"
            android:layout_marginRight="226dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/uploaded1"/>
    <ImageView
            android:layout_width="169dp"
            android:layout_height="213dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageView7" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="473dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="45dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="217dp" android:layout_marginStart="217dp" android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/uploaded2"/>
    <TextView
            android:text="@string/category"
            android:layout_width="107dp"
            android:layout_height="36dp" android:id="@+id/catE"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.042" android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.588"/>
    <TextView
            android:text="@string/business_name"
            android:layout_width="107dp"
            android:layout_height="36dp" android:id="@+id/bName"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="667dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="296dp" android:layout_marginStart="296dp" android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/your_account"
            android:layout_width="221dp"
            android:layout_height="42dp" android:id="@+id/acc"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.084" app:layout_constraintVertical_bias="0.023"
            android:textSize="36sp" android:fontFamily="@font/fenix" android:textColor="#131212"
            android:textStyle="bold"/>
    <Button
            android:text="@string/apply_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ApplyBtn"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="667dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="145dp" android:layout_marginStart="145dp" android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText android:layout_width="125dp" android:layout_height="38dp"
              android:id="@+id/editBName" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.943"
              app:layout_constraintVertical_bias="0.172" android:inputType="textPersonName" android:autofillHints=""
              android:hint="@string/update_this" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>