<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity" android:background="#7703A9F4" android:id="@+id/loginPage">

    <TextView
            android:text="@string/login"
            android:layout_width="88dp"
            android:layout_height="47dp" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.094"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:fontFamily="monospace"
            android:textStyle="bold" android:fadingEdge="horizontal|vertical"/>
    <EditText
            android:layout_width="327dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword"
            android:hint="@string/enter_password" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="0.041" android:cursorVisible="true"
            android:fadingEdge="horizontal|vertical" android:background="#36594B4B"/>
    <EditText
            android:layout_width="329dp"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextTextEmailAddress"
            android:autofillHints="" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"
            android:hint="@string/enter_email" android:cursorVisible="true" android:fadingEdge="horizontal|vertical"
            android:background="#36594B4B" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.513"/>
    <Button
            android:text="@string/login"
            android:layout_width="188dp"
            android:layout_height="72dp" android:id="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.253"/>
</androidx.constraintlayout.widget.ConstraintLayout>